tools/output/foo/wsmtest/workspacemanager/workspacemanager/templates/ingress/service.yaml
---
# Source: workspacemanager/templates/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workspacemanager-service
  labels:
    helm.sh/chart: "workspacemanager-0.33.0"
    app.kubernetes.io/name: workspacemanager
    app.kubernetes.io/instance: "workspacemanager"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/component: workspacemanager
    app.kubernetes.io/part-of: terra
  annotations:
    # Associate a backend config with the ingress: https://cloud.google.com/kubernetes-engine/docs/how-to/ingress-features#associating_backendconfig_with_your_ingress
    cloud.google.com/backend-config: '{"default": "workspacemanager-ingress-backendconfig"}'
    # Enable container-native load balancing https://cloud.google.com/kubernetes-engine/docs/how-to/container-native-load-balancing
    cloud.google.com/neg: '{"ingress": true}'
    # Enable TLS between LB and apache proxy https://cloud.google.com/kubernetes-engine/docs/concepts/ingress-xlb
    cloud.google.com/app-protocols: '{"https":"HTTPS"}'
spec:
  type: ClusterIP
  selector:
    deployment: workspacemanager-deployment
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
